--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,11 @@
 language: c
-matrix:
-  include:
-  - os: linux
-    sudo: required
-    dist: trusty
-  - os: osx
 compiler:
   - gcc
 before_install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update -qq; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
+  - sudo apt-get update -qq
 install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install -y pkg-config libtool autopoint gettext zlib1g-dev libbz2-dev liblzma-dev libselinux1-dev libncursesw5-dev perl libio-string-perl; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install gettext libtool xz gnu-tar perl; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then cpanm IO::String || true; fi
+  - sudo apt-get install -y pkg-config libtool autopoint gettext zlib1g-dev libbz2-dev liblzma-dev libselinux1-dev libncursesw5-dev perl libio-string-perl
 script:
-  - PATH=/usr/local/opt/gettext/bin:/usr/local/opt/libtool/bin:$PATH autoreconf -f -i && ./configure && make check
+  - autoreconf -f -i && ./configure --enable-coverage && make check
 after_success:
   - bash <(curl -s https://codecov.io/bash)
